--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 body {
+  background-color: #292929; /* dark grey */
+  color: #977950; /* gold */
+  
   font-family: 'Literata', Arial;
 }
